--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <br>
             <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
 
-                <br><br>DIMUN is back! The tenth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 13th of March to 15th of March 2020.
+                <br><br>DIMUN is back! The tenth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from the <br>13th of March to 15th of March 2020.
 
                 <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
 
