--- a/schedule.html
+++ b/schedule.html
@@ -93,7 +93,7 @@
 	                <h1> Schedule </h1>
 	                <p><small>Below is the Delegate's schedule for the conference.</small></p>
 	                <hr>
-					<h2>Friday, 1st March 2019</h2>
+					<h2>Friday, 13th March 2020</h2>
 					<table style="width:100%; ">
 						<tr>
 							<th style="text-align:left;float:left;"><strong>Event</strong></th>
@@ -111,6 +111,7 @@
 							<td style="text-align:left;float:left;">Opening Ceremony commences in the Wodehouse Theater</td>
 							<td style="text-align:right;float:right;">14:00</td>
 						</tr>
+                        <tr>
 							<td style="text-align:left;float:left;">Delegates in committee rooms, roll call, opening speeches, lobbying begins</td>
 							<td style="text-align:right;float:right;">15:15</td>
 						</tr>
@@ -132,7 +133,7 @@
 						</tr>
 					</table>
 					<hr>
-					<h2>Saturday, 2nd March 2019</h2>
+					<h2>Saturday, 14th March 2020</h2>
 					<table style="width:100%">
 						<tr>
 							<th style="text-align:left;float:left;"><strong>Event</strong></th>
@@ -180,7 +181,7 @@
 						</tr>
 					</table>
 					<hr>
-					<h2>Sunday, 3rd March 2019</h2>
+					<h2>Sunday, 15th March 2020</h2>
 					<table style="width:100%">
 						<tr>
 							<th style="text-align:left;float:left;"><strong>Event</strong></th>
@@ -192,7 +193,7 @@
 						</tr>
 						<tr>
 							<td style="text-align:left;float:left;">Delegates in committee rooms, roll call, opening speeches, debating resumes</td>
-							<td style="text-align:right;float:right;"09:15</td>
+							<td style="text-align:right;float:right;">09:15</td>
 						</tr>
 						<tr>
 							<td style="text-align:left;float:left;">Break (staggered)</td>
