Final Push before Dec Hols

--- a/AP.html
+++ b/AP.html
@@ -74,6 +74,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="munapp.html">MUNApp</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -99,10 +102,10 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The Advisory Panel acts to aid the security council and advise them before their final verdict. This council is open to KS4/5 students.
-						<br>The chairs for this council are; Jullia Kim and Erik Chen.<br>
+						<br>The chairs for this council are; Joy Ryu and Seoyeon Yu.<br>
 						<br>The topics for this committee are;<br>
-				            <li>The question of humanitarian exemptions on the sanction regime of the DPRK</li>
-                        	<li>Rebuilding infrastructure damaged as a result of the Libyan Civil War</li>
+                        <li>The question of the humanitarian crisis in Yemen. </li>
+                        <li>Addressing the issue of Kurdish militant groups and the ongoing Kurdish-Turkish conflicts. </li>
 					</p>
 				</div>
             </div>
@@ -114,9 +117,9 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Julia Kim.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/Joy Ryu.jpeg" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Jullia Kim</div>
+                        <div class="text-com">Joy Ryu</div>
                     </div>
                 </div>
             </div>
@@ -124,17 +127,18 @@
                 <p align="center">
 				<br><br><br>
                     <br>
-                        <strong>Click to download research reports for...</strong><br>
+                    Chair reports coming soon!!!
+                        <!--<strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/AP/The%20question%20of%20humanitarian%20exemptions%20on%20the%20sanction%20regimes%20of%20the%20DPRK.pdf", title="The question of humanitarian exemptions on the sanction regime of the DPRK">Topic 1</a><br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/AP/Rebuilding%20infrastructure%20damaged%20as%20a%20result%20of%20the%20Libyan%20Civil%20War.pdf", title="Rebuilding infrastructure damaged as a result of the Libyan Civil War">Topic 2</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/AP/Rebuilding%20infrastructure%20damaged%20as%20a%20result%20of%20the%20Libyan%20Civil%20War.pdf", title="Rebuilding infrastructure damaged as a result of the Libyan Civil War">Topic 2</a><br>-->
 				    <br>
 				</p>
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/Seoyeon Yu.jpg" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Erik Chen</div>
+                        <div class="text-com">Seoyeon Yu</div>
                     </div>
                 </div>
             </div>
@@ -175,7 +179,6 @@
 						<option value="Delegate">Delegate</option>
                         <option value="Chair">Chair</option>
 						<option value="Admin">Admin</option>
-						<option value="Press">Press</option>
 				    </select>
                 </div>
               </div>
@@ -223,7 +226,7 @@
 
         <div class="col-md-6 mb-md-0 mb-5">
             <h2 class="h1-responsive font-weight-bold text-center my-5">Resolutions<hr></h2>
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1npB9CY7FMVUsNRLOL2fh-mWkf28tOWLW#list" style=" border:0;width:100%;height:100%;"></iframe>
+            <iframe src="https://drive.google.com/embeddedfolderview?id=19P__Md8nWl4niQna80ZJVeeSNILyzpQS#list" style=" border:0;width:100%;height:100%;"></iframe>
         </div>
 
         </div>
