--- a/so.html
+++ b/so.html
@@ -31,8 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-dark" href="committees.html">Committees</a>
-                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -45,7 +44,7 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>-->
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
@@ -73,6 +72,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="munapp.html">MUNApp</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -95,32 +97,32 @@
                 <hr>
 				<h7>
 					<strong>General Assembly 1 [GA1]</strong><br>
-					Yulim Koo<br>
-					Mina Xiao<br>
+					Charlie Yang<br>
+					Victoria Hong<br><br>
 					<strong>General Assembly 2 [GA2]</strong><br>
-					Ethan Hou<br>
-					Elina Du<br>
+					Jeehyun Song<br>
+					Eugene Shim<br><br>
 					<strong>Environment Commission [ENV]</strong><br>
-					Ellie Green<br>
-					Leighton DuYang<br>
+					Betty Hong<br>
+					Crystal Gong<br><br>
 					<strong>Economic and Social [ECOSOC]</strong><br>
-					Jaewon Choi<br>
-					Seung Yon Kim<br>
+					Audrey Wong<br>
+					Sofija Gribovski<br><br>
 					<strong>Human Rights Council [HRC]</strong><br>
-					Heather Leung<br>
-					Joy Ryu<br>
+					Charlotte Kim<br>
+					Seungyon Kim<br><br>
 					<strong>Special Conference [SPC]</strong><br>
-					Su Lee<br>
-					Ashley Zhou<br>
+					Lily Lee<br>
+					Nicky Baek<br><br>
 					<strong>Disarmament Council [DIS]</strong><br>
-					Sean Choi<br>
-					Guan Rong Tan<br>
+					Sharanya Trivedi<br>
+					Joshua Pan<br><br>
 					<strong>Security Council [SC]</strong><br>
-					Si In Park<br>
-					Ally Huang<br>
+					Seongjun Choi<br>
+					Vince Tiu<br><br>
 					<strong>Advisory Panel [AP]</strong><br>
-					Jullia Kim<br>
-					Erik Chen<br>
+					Joy Ryu<br>
+					Seoyeon Yu<br><br>
 					<br>
 				</h7>
             </div>
