--- a/schedule.html
+++ b/schedule.html
@@ -30,24 +30,23 @@
 	        </button>
 	        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	            <ul class="navbar-nav mr-auto">
-	                <li class="nav-item dropdown">
-	                    <a class="nav-link text-dark" href="committees.html">Committees</a>
-                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
-	                    <div class="dropdown-menu">
-	                        <a class="dropdown-item" href="committees.html">Overview</a>
-	                        <a class="dropdown-item" href="GA1.html">GA1</a>
-	                        <a class="dropdown-item" href="GA2.html">GA2</a>
-	                        <a class="dropdown-item" href="ENV.html">ENV</a>
-	                        <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>
-	                        <a class="dropdown-item" href="HRC.html">HRC</a>
-	                        <a class="dropdown-item" href="SPC.html">SPC</a>
-	                        <a class="dropdown-item" href="DIS.html">DIS</a>
-	                        <a class="dropdown-item" href="SC.html">SC</a>
-	                        <a class="dropdown-item" href="AP.html">AP</a>
-	                    </div>
-	                </li>-->
-	                <li class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
+	               <li class="nav-item dropdown">
+	                <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+	                 <div class="dropdown-menu">
+	                     <a class="dropdown-item" href="committees.html">Overview</a>
+	                     <a class="dropdown-item" href="GA1.html">GA1</a>
+	                     <a class="dropdown-item" href="GA2.html">GA2</a>
+	                     <a class="dropdown-item" href="ENV.html">ENV</a>
+	                     <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>
+	                     <a class="dropdown-item" href="HRC.html">HRC</a>
+	                     <a class="dropdown-item" href="SPC.html">SPC</a>
+	                     <a class="dropdown-item" href="DIS.html">DIS</a>
+	                     <a class="dropdown-item" href="SC.html">SC</a>
+	                     <a class="dropdown-item" href="AP.html">AP</a>
+	                 </div>
+	               </li>
+	               <li class="nav-item dropdown">
+                       <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
 	                    <div class="dropdown-menu">
 	                        <a class="dropdown-item" href="directors.html">Directors</a>
 	                        <a class="dropdown-item" href="secretariat.html">Secretariat</a>
@@ -73,6 +72,9 @@
 	                <li class="nav-item">
 	                    <a class="nav-link text-dark" href="press.html">Press</a>
 	                </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="munapp.html">MUNApp</a>
+                    </li>
 	            </ul>
 	            <ul class="navbar-nav">
 	                <li class="nav-item">
