--- a/secretariat.html
+++ b/secretariat.html
@@ -31,8 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-dark waves-effect waves-light" href="committees.html">Committees</a>
-                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -45,8 +44,8 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>-->
-                </li><li class="nav-item dropdown">
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item waves-effect waves-light" href="directors.html">Directors</a>
@@ -72,6 +71,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark waves-effect waves-light" href="press.html">Press</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="munapp.html">MUNApp</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
