--- a/so.html
+++ b/so.html
@@ -93,7 +93,7 @@
         <div class="text-center container-fluid first">
             <div class="team">
                 <h1> Student Officers </h1>
-                <p><small>Student Officers for DIMUN IX</small></p>
+                <p>Student Officers for DIMUN X</p>
                 <hr>
 				<h7>
 					<strong>General Assembly 1 [GA1]</strong><br>
