--- a/GA1.html
+++ b/GA1.html
@@ -140,7 +140,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Victoria Hong.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/VIctoria Hong.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Victoria Hong</div>
                     </div>
