--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -107,6 +107,7 @@
                             <li>Addressing mass youth unemployment in developing nations</li>
                             <li>Measures to cope with social pressures caused by ageing populations</li>
                             <li>Question of establishing the parameters for government interference in cryptocurrency</li>
+                            <li>Methods to eliminate absolute poverty in developing countries</li>
 					</p>
 				</div>
             </div>
