--- a/GA1.html
+++ b/GA1.html
@@ -107,6 +107,7 @@
                             <li>Measures to combat wildfire in Russia</li>
                             <li>Addressing rampant plastic pollution in the oceans</li>
                             <li>Assisting in the sustainable development of healthcare and sanitation in Sierra Leone</li>
+                            <li>Measures to protect endangered species in Africa</li>
 					</p>
 				</div>
             </div>
