--- a/GA2.html
+++ b/GA2.html
@@ -107,6 +107,7 @@
 							<li>Measures to contain the rising prevalence of measles globally</li>
                             <li>Addressing the rise of anti-Semitism</li>
                             <li>Methods to promote the development of democratic institutions in Africa</li>
+                            <li>The question of minimizing the impact of storms and monsoons on developing countries</li>
 					</p>
 				</div>
             </div>
