--- a/SPC.html
+++ b/SPC.html
@@ -107,6 +107,7 @@
 							<li>Addressing the lack of data privacy globally</li>
                             <li>Assisting in the implementation of big data infrastructure in developing countries</li>
                             <li>Measures to address cyberattacks through digital diplomacy</li>
+                            <li>The question fo environmental policy in containing CO2 emissions globally</li>
 					</p>
 				</div>
             </div>
