--- a/committees.html
+++ b/committees.html
@@ -110,6 +110,7 @@
             <h5 class="text-dark"> Measures to combat wildfire in Russia
                 <br><br>Addressing rampant plastic pollution in the oceans
                 <br><br>Assisting in the sustainable development of healthcare and sanitation in Sierra Leone
+                <br><br>Measures to protect endangered species in Africa
                 <br><br>
             </h5>
             <br>
@@ -124,6 +125,7 @@
             <h5 class="text-light"> Measures to contain the rising prevalence of measles globally
                 <br><br>Addressing the rise of anti-Semitism
                 <br><br>Methods to promote the development of democratic institutions in Africa
+                <br><br>The question of minimizing the impact of storms and monsoons on developing countries
                 <br><br>
             </h5>
             <br>
@@ -154,6 +156,7 @@
             <h5 class="text-light"> Addressing mass youth unemployment in developing nations
                 <br><br>Measures to cope with social pressures caused by ageing populations
                 <br><br>Question of establishing the parameters for government interference in cryptocurrency
+                <br><br>Methods to eliminate absolute poverty in developing countries
                 <br><br>
             </h5>
             <br>
@@ -184,6 +187,7 @@
             <h5 class="text-light">Addressing the lack of data privacy globally
                 <br><br>Assisting in the implementation of big data infrastructure in developing countries
                 <br><br>Measures to address cyberattacks through digital diplomacy
+                <br><br>The question fo environmental policy in containing CO2 emissions globally
                 <br><br>
             </h5>
             <br>
