I did an oopsies

--- a/SC.html
+++ b/SC.html
@@ -102,7 +102,7 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The security council seeks to promote world peace, engaging with the most critical issues facing the security of the world.
-						<br>The chairs for this council are; Si In Park and Ally Huang.<br>
+						<br>The chairs for this council are; Seongjun Choi and Vince Tiu.<br>
 						<br>The topics for this committee are;<br>
                             <li>Addressing the recurrent ethnic conflicts in Burkina Faso</li>
                             <li>Question of demilitarizing the Kashmir Valley</li>
