--- a/SPC.html
+++ b/SPC.html
@@ -102,7 +102,7 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The Special Conference on Non-State Actors seeks to address the issue of non-UN, non-state actors to help resolve conflict, tensions and promote diplomatic dialogue.
-						<br>The chairs for this council are; Su Lee and Ashley Zhou.<br>
+						<br>The chairs for this council are; Lily Lee and Nicky Baek.<br>
 						<br>The topics for this committee are;<br>
 							<li>Addressing the lack of data privacy globally</li>
                             <li>Assisting in the implementation of big data infrastructure in developing countries</li>
