--- a/ENV.html
+++ b/ENV.html
@@ -119,7 +119,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Betty Hong.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/Betty Hong.jpeg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Betty Hong</div>
                     </div>
