--- a/accommodation.html
+++ b/accommodation.html
@@ -94,6 +94,13 @@
             <div class="team">
                 <h1>Recommended Accommodation</h1>
                 <hr>
+                <br>
+                <h4>Information coming soon<br><br>
+                More information regarding hotels coming soon!<br>
+                Please keep updated through the this page! Feel free to email us if you have any inquiries regarding hotels at <a href="mailto:dimun@dulwich-beijing.cn">dimun@dulwich-beijing.cn</a>
+                </h4>
+                                
+                <!--
                 <div class="row">
                     <div class="col-md-5">
                         <h2>Hilton Beijing Capital Airport</h2>
@@ -124,7 +131,7 @@
                         <br>
                     </div>
                 </div>
-
+                -->
             </div>
         </div>
     </section>
