--- a/contact.html
+++ b/contact.html
@@ -92,9 +92,9 @@
     <section class="my-5">
         <br><br><br>
       <!-- Section heading -->
-      <h2 class="h1-responsive font-weight-bold text-center my-5">Tech support</h2>
+      <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us!</h2>
       <!-- Section description -->
-      <p class="text-center w-responsive mx-auto mb-5">The DIMUN Tech team will ensure that your concerns/questions be addressed quickly.</p>
+      <p class="text-center w-responsive mx-auto mb-5">The DIMUN team will ensure that your concerns/questions be addressed quickly.</p>
 
       <!-- Grid row -->
       <div class="row">
