--- a/schedule.html
+++ b/schedule.html
@@ -92,6 +92,8 @@
 	        <div class="text-center container-fluid first">
 	            <div class="team">
 	                <h1> Schedule </h1>
+                    <p>Schedule for DIMUN X will be updated shorty.<br>Please contact us if you have any inquiries.</p>
+                    <!--
 	                <p><small>Below is the Delegate's schedule for the conference.</small></p>
 	                <hr>
 					<h2>Friday, 13th March 2020</h2>
@@ -216,7 +218,7 @@
 							<td style="text-align:left;float:left;">Delegates depart</td>
 							<td style="text-align:right;float:right;">14:45</td>
 						</tr>
-					</table>
+					</table>-->
 					<br>
 	            </div>
 	        </div>
