--- a/transport.html
+++ b/transport.html
@@ -92,7 +92,7 @@
         <div class="text-center container-fluid first">
             <div class="team">
                 <h1>Transport</h1>
-                <p>The conference will take place in Dulwich College Beijing starting from March 1st 2019.</p>
+                <p>The conference will take place in Dulwich College Beijing starting from March 13th 2020.</p>
                 <hr>
                 <div class="row">
                     <div class="col-md-5">
