--- a/accommodation.html
+++ b/accommodation.html
@@ -94,34 +94,12 @@
                 <h1>Recommended Accommodation</h1>
                 <hr>
                 <br>
-                <h4>Information coming soon<br><br>
-                More information regarding hotels coming soon!<br>
-                Please keep updated through the this page! Feel free to email us if you have any inquiries regarding hotels at <a href="mailto:dimun@dulwich-beijing.cn">dimun@dulwich-beijing.cn</a>
-                </h4>
-                                
-                <!--
                 <div class="row">
                     <div class="col-md-5">
-                        <h2>Hilton Beijing Capital Airport</h2>
-                        <p>Hilton Beijing Capital Airport is situated just 5 minutes by shuttle bus from the airport and the Beijing airport rail link. Our 322 guest rooms feature modern Oriental décor, soundproofed floor-to-ceiling windows and WiFi access.
+                        <h2>Crowne Plaza Beijing International Airport</h2>
+                        <p>Crowne Plaza Beijing International Airport is 'The Place to Meet' with its convenient location across from the New China International Exhibition Center, Beijing Airport Industrial Park, and only 15 minutes away from the International Airport, and complimentary shuttle bus service between airport and the hotel, and should be reserved in advance.
                         <hr>
-                        Location: Terminal 3, Sanjing Road, Beijing Capital Inter, China</p>
-                    </div>
-                    <div class="col-md-7">
-                        <div id="container-1" style="height: 60vh;width:100%;">
-                        </div>
-                        <br>
-
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-md-5">
-                        <h2>CITIC Hotel</h2>
-                        <p>Located just a few minutes from the Beijing Capital Airport, the hotel offers free airport shuttle, city and exhibition shuttle services. Guests have access to a recreation centre, an indoor and outdoor pool, and several international restaurants and casual cafes.
-                        <hr>
-                        Location: No.9 Xiao Tianzhu Road, Capital International Airport, Beijing, China, 100621</p>
-                        <div class="alert alert-primary"><a href="https://github.com/dadimun/pdfs/raw/master/CITIC.pdf">Booking information</a></div>
+                        Location: No.60 Fuqian First Street, Tianzhu, Shunyi District, Beijing, China 101312</p>
                     </div>
                     <div class="col-md-7">
                         <div id="container-2" style="height: 60vh;width:100%;">
@@ -130,9 +108,21 @@
                         <br>
                     </div>
                 </div>
-                -->
-            </div>
-        </div>
+            <br>
+                <div class="row">
+                    <div class="col-md-5">
+                        <h2>Hilton Beijing Capital Airport</h2>
+                        <p>Hilton Beijing Capital Airport is situated just 5 minutes by shuttle bus from the airport and the Beijing airport rail link. Our 322 guest rooms feature modern Oriental décor, soundproofed floor-to-ceiling windows and WiFi access.
+                        <hr>
+                        Location: 1 Sanjing Road, Beijing Capital International Airport, Beijing, China, 100621</p>
+                    </div>
+                    <div class="col-md-7">
+                        <div id="container-1" style="height: 60vh;width:100%;">
+                        </div>
+                        <br>
+
+                    </div>
+                </div>
     </section>
 
 
@@ -152,7 +142,7 @@
     <script>
 
         var map1 = new BMap.Map("container-2");
-        var point1 = new BMap.Point(116.596795, 40.055278);
+        var point1 = new BMap.Point(116.709600, 40.156520);
         map1.centerAndZoom(point1, 15);
         map1.enableScrollWheelZoom(true);
         var marker1 = new BMap.Marker(point1);
