--- a/accommodation.html
+++ b/accommodation.html
@@ -93,6 +93,7 @@
             <div class="team">
                 <h1>Recommended Accommodation</h1>
                 <hr>
+                <div class="alert alert-primary"><a href="https://github.com/dadimun/pdfs/raw/master/DIMUN%20Hotel%20Recommendations.docx">Booking Instructions</a></div>
                 <br>
                 <div class="row">
                     <div class="col-md-5">
