Well, updates have been made

--- a/directors.html
+++ b/directors.html
@@ -97,7 +97,7 @@
 
                     <br><br>The majority of delegates in each committee will be in Years 7 to 9 (Grades 6 to 8); the student officer Chairs leading each committee will be in Years 10 to 13 (Grades 9 to 12) and will be from participating schools. Committee Chairs will need to apply for the positions; we will send out application forms in September. DIMUN delegates are not required to have past MUN experience.
 
-                    <br><br>The conference will last three days, starting the morning of Friday the 1st, continuing until Sunday afternoon. The fee per participant is RMB 750/USD 120, which includes lunch on all three days, dinner on Friday and Saturday, and badges, folders, and t-shirts. Accommodation, insurance, and travel to and from Beijing are not included in the conference fee. Accommodation can be booked as needed at a nearby Crowne Plaza Hotel or CITIC Hotel; transport between the hotel and the conference will be provided, as well as transport to and from Dulwich College Beijing and the airport.
+                    <br><br>The conference will last three days, starting the morning of Friday the 1st, continuing until Sunday afternoon. The fee per participant is RMB 750/USD 120, which includes lunch on all three days, dinner on Friday and Saturday, and badges, folders, and t-shirts. Accommodation, insurance, and travel to and from Beijing are not included in the conference fee. Accommodation can be booked as needed at a nearby Crowne Plaza Hotel or Hilton Hotel; transport between the hotel and the conference will be provided, as well as transport to and from Dulwich College Beijing and the airport.
 
                     <br><br><a href="https://github.com/dadimun/pdfs/raw/master/DIMUNDirectors%20guide.pdf"><img src="img/DIMUNDirectors guide.jpg" style="height:200px;width:auto;"></a>
                     <footer class="blockquote-footer mb-3"> Download DIMUN Director's guide</footer>
@@ -110,7 +110,6 @@
 
                     <br><br>Please do not hesitate to contact us by email for further details regarding DIMUN X. </p>
             </div>
-        </div>
     </section>
 
 
