--- a/munapp.html
+++ b/munapp.html
@@ -90,6 +90,7 @@
 
     <section>
         <div class="text-center container-fluid first">
+            <div id="#MUNApp">
             <div class="team">
                 <h1>MUNApp</h1>
                 <hr>
@@ -180,6 +181,7 @@
                     -->
                 
             </div>
+        </div>
         </div>
     </section>
 
