--- a/contact.html
+++ b/contact.html
@@ -189,6 +189,7 @@
 
     </section>
 <!-- Section: Contact v.2 -->
+            <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=9Gl2f4mcdf-u-zuxyCV1jl4BvBJUo6mHl3Yv5smBfzI"></script>
         </div>
     </section>
 
