pure spite, jinho.

--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -101,18 +101,16 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The Economic and Social Council engages with issues dealing with the welfare of member states.
-						<br>The chairs for this council are; Audrey Wong and Sofi Gribovski.<br>
+						<br>The chairs for this council are TBD.<br>
 						<br>The topics for this committee are;<br>
-                            <li>Addressing mass youth unemployment in developing nations</li>
-                            <li>Measures to cope with social pressures caused by ageing populations</li>
-                            <li>Question of establishing the parameters for government interference in cryptocurrency</li>
-                            <li>Methods to eliminate absolute poverty in developing countries</li>
+                            <li>The question of establishing the parameters for government interference in cryptocurrency</li>
+                            <li>Facilitating international frameworks for post-COVID-19 economic recovery</li>
 					</p>
 				</div>
             </div>
         </div>
     </section>
-
+<!--
     <section class="chairs container">
 	<h2>Chairs for ECOSOC</h2><br>
         <div class="row" style="margin-right:0;">
@@ -134,7 +132,7 @@
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20issue%20of%20urban%20slums%20in%20South%20America.pdf", title="Addressing the issue of urban slums in South America">Topic 1</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Improving%20infrastructure%20for%20technological%20growth%20in%20developing%20African%20Economies.pdf", title="Improving infrastructure for technological growth in developing African economies">Topic 2</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20economic%20crisis%20in%20Venezuela.pdf", title="Addressing the economic crisis in Venezuela">Topic 3</a><br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>-->
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>--><!--
 				    <br>
                 </p>
             </div>
@@ -148,7 +146,7 @@
             </div>
         </div>
     </section>
-
+-->
     <section align="center">
         <div class="text-center container">
             <!-- Section: Contact v.2 -->
