--- a/ENV.html
+++ b/ENV.html
@@ -101,12 +101,10 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The Enviroment Commission seeks to protect the environment and the people who depend on it.
-						<br>The chairs for this council are; Betty Hong and Crystal Gong.<br>
+						<br>The chairs for this council are TBD.<br>
 						<br>The topics for this committee are;<br>
                             <li>The question of enforcing environmental sustainability policies</li>
-                            <li>Addressing the impacts of eutrophication and water pollution in Latin America, Africa and Asia</li>
-                            <li>Facilitating the protection of coral reefs</li>
-                            <li>Methods to reduce deforestation in South East Asia</li>
+                            <li>Measures to combat wildfires in Austalia</li>
 					</p>
 				</div>
             </div>
