--- a/GA1.html
+++ b/GA1.html
@@ -101,12 +101,11 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">General assembly consists of all members states and engages in a variety of issues raised by the member states.
-						<br>The chairs for this council are; Charlie Yang and Victoria Hong.<br>
+						<br>The chairs for this council are TBD.<br>
 						<br>The topics for this committee are;<br>
-                            <li>Measures to combat wildfire in Russia</li>
+                            <li>Facilitating the global effort to contain COVID-19</li>
                             <li>Addressing rampant plastic pollution in the oceans</li>
-                            <li>Assisting in the sustainable development of healthcare and sanitation in Sierra Leone</li>
-                            <li>Measures to protect endangered species in Africa</li>
+                            <li>Addressing structural gender inequality at a global level</li>
 					</p>
 				</div>
             </div>
