--- a/HRC.html
+++ b/HRC.html
@@ -101,12 +101,11 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The Human Rights Council acts to safeguard the rights of all based on the United Nations declaration of human rights.
-						<br>The chairs for this council are; Charlotte Kim and Seung Yon Kim.<br>
+						<br>The chairs for this council are TBD.<br>
 						<br>The topics for this committee are;<br>
-                            <li>Addressing global femicide</li>
-                            <li>Measures to address human rights abuses in Saudi Arabia and Yemen</li>
-                            <li>The question of promoting freedom of speech on social media platforms</li>
-                            <li>Upholding the right to adequate housing</li>
+                            <li>The situation of informal workers</li>
+                        <li>The question of holding social media companies accountable for cyber-safety </li>
+
 					</p>
 				</div>
             </div>
