--- a/SC.html
+++ b/SC.html
@@ -101,11 +101,11 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The security council seeks to promote world peace, engaging with the most critical issues facing the security of the world.
-						<br>The chairs for this council are; Seongjun Choi and Vince Tiu.<br>
+						<br>The chairs for this council are TBD.<br>
 						<br>The topics for this committee are;<br>
-                            <li>Addressing the recurrent ethnic conflicts in Burkina Faso</li>
-                            <li>Question of demilitarizing the Kashmir Valley</li>
-                            <li>Question of the situation in Northern Syria</li>
+                            <li>Question of demilitarizing the Kashmir Valley </li>
+                            <li>The situation in Nagorno-Karabakh </li>
+                            <li>Addressing refugee deaths in UN refugee camps</li>
 					</p>
 				</div>
             </div>
