--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -110,15 +110,14 @@
             </div>
         </div>
     </section>
-<!--
     <section class="chairs container">
 	<h2>Chairs for ECOSOC</h2><br>
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Audrey Wong.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/rayfang.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Audrey Wong</div>
+                        <div class="text-com">Ray Fang</div>
                     </div>
                 </div>
             </div>
@@ -132,21 +131,20 @@
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20issue%20of%20urban%20slums%20in%20South%20America.pdf", title="Addressing the issue of urban slums in South America">Topic 1</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Improving%20infrastructure%20for%20technological%20growth%20in%20developing%20African%20Economies.pdf", title="Improving infrastructure for technological growth in developing African economies">Topic 2</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20economic%20crisis%20in%20Venezuela.pdf", title="Addressing the economic crisis in Venezuela">Topic 3</a><br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>--><!--
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>-->
 				    <br>
                 </p>
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Sofi Gribovski.JPG" alt="" class="image">
+                    <img src="img/Chair Photos/tomcai.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Sofi Gribovski</div>
+                        <div class="text-com">Tom Cai</div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
--->
     <section align="center">
         <div class="text-center container">
             <!-- Section: Contact v.2 -->
