--- a/ENV.html
+++ b/ENV.html
@@ -116,7 +116,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Betty Hong.jpeg" alt="" class="image">
+                    <img src="img/Chair Photos/bettyhong.png" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Betty Hong</div>
                     </div>
@@ -138,9 +138,9 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Crystal Gong.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/zionkang.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Crystal Gong</div>
+                        <div class="text-com">Zion Kang</div>
                     </div>
                 </div>
             </div>
