--- a/SC.html
+++ b/SC.html
@@ -117,9 +117,9 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Seongjun Choi.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/brianlee.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Seongjun Choi</div>
+                        <div class="text-com">Brian Lee</div>
                     </div>
                 </div>
             </div>
@@ -138,9 +138,9 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Vince Tiu.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/henryhan.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Vince Tiu</div>
+                        <div class="text-com">Henry Han</div>
                     </div>
                 </div>
             </div>
