--- a/GA1.html
+++ b/GA1.html
@@ -117,9 +117,9 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Charlie Yang.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/rayfang.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Charlie Yang</div>
+                        <div class="text-com">Ray Fang</div>
                     </div>
                 </div>
             </div>
@@ -139,9 +139,9 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/VIctoria Hong.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/joewang.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Victoria Hong</div>
+                        <div class="text-com">Joe Wang</div>
                     </div>
                 </div>
             </div>
