--- a/HRC.html
+++ b/HRC.html
@@ -117,9 +117,9 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Charlotte Kim.jpg" alt="" class="image">
+                    <img src="img/Chair Photos/lilylee.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Charlotte Kim</div>
+                        <div class="text-com">Lily Lee</div>
                     </div>
                 </div>
             </div>
@@ -139,9 +139,9 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Chair Photos/Seung Yon Kim.JPG" alt="" class="image">
+                    <img src="img/Chair Photos/lilywang.png" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Seung Yon Kim</div>
+                        <div class="text-com">Lily Wang</div>
                     </div>
                 </div>
             </div>
